tests/positive/test-success-printfloat.rooc
fun main() -> int{
    print_float(1.);
    println();
    print_float(-1.0);
    return 0;
}