tests/negative/test-fail-assign.rooc
fun main () -> int {
    1 = 1;
    return 0;
}